Objetivo geral atualizado

--- a/Cap1.tex
+++ b/Cap1.tex
@@ -22,7 +22,9 @@ O descobrimento da apneia do sono pela comunidade médica é relativamente recen
 
 \section{Objetivo Geral}
 
-Desenvolver um protótipo vestível de monitoramento do sono para a detecção de apnéia com comunicação remota para smartphone, tratamento de dados em servidor e disponibilização de dados tratados por meio de dashboards e gráficos em aplicativo mobile e web.
+Desenvolver um protótipo vestível de monitoramento do sono que realiza a detecção de apneia por meio de sensores de ar e de oximetria do sangue.
+Após coletados os dados, o aparelho os envia, por meio de comunicação remota (bluetooth), para o smartphone do usuário. 
+Este que, igualmente, envia os dados para um servidor que efetua o tratamento dos dados e os disponibiliza através de dashboards e gráficos em aplicativo mobile e na web, a fim de que seja realizado o correto diagnóstico e acompanhamento da condição.
 
 \section{OBJETIVOS ESPECÍFICOS}
 
