--- a/Cap1.tex
+++ b/Cap1.tex
@@ -1,15 +1,21 @@
 \chapter{     Introdução }\label{intro}
-% De acordo com o último EPISONO realizado em 2018, pesquisa realizada a cada dez anos para monitorar a qualidade do sono, 32,8\% da população de São Paulo possui apnéia do sono, uma condição clínica caracterizada por pausas respiratórias de no mínimo 10 segundos. Para que a pessoa possa sair de um episódio de apnéia, ela precisa despertar e com isso, pessoas nesta condição passam por um ciclo de sono, apnéia e despertamento que pode ocorrer de dezenas a centenas de vezes em uma mesma noite. Por este motivo, uma pessoa com essa condição tem dificuldade de entrar em sono profundo, prejudicando em muito a qualidade de seu sono. Sabemos que dormir bem é essencial para uma boa saúde e funcionamento do corpo, portanto este problema afeta consideravelmente a qualidade de vida de quem o possui [1].
 
-% Segundo o Dr. Carlos M. Nunes, mais de 85\% dos pacientes com apneia do sono não são diagnosticados, o que significa que centenas de milhões de pessoas têm paradas respiratórias repetidas em vez de terem um sono restabelecedor e saudável a cada noite [2].
+De acordo com o último EPISONO realizado em 2018, pesquisa realizada a cada dez anos para monitorar a qualidade do sono, 32,8\% da população de São Paulo possui apnéia do sono, uma condição clínica caracterizada por pausas respiratórias de no mínimo 10 segundos. 
+Para que a pessoa possa sair de um episódio de apnéia, ela precisa despertar e com isso, pessoas nesta condição passam por um ciclo de sono, apnéia e despertamento que pode ocorrer de dezenas a centenas de vezes em uma mesma noite. 
+Por este motivo, uma pessoa com essa condição tem dificuldade de entrar em sono profundo, prejudicando em muito a qualidade de seu sono. 
+Sabemos que dormir bem é essencial para uma boa saúde e funcionamento do corpo, portanto este problema afeta consideravelmente a qualidade de vida de quem o possui [1].
 
-% Pensando neste cenário onde existe um problema tão relevante para a nossa sociedade com um nível tão baixo de diagnóstico, o trabalho proposto é o desenvolvimento de um hardware composto de uma braçadeira com sensor de oxigenação sanguínea, e uma máscara com sensores embutidos para a aquisição de sinais oriundos da respiração do usuário durante o sono. Esses dados são enviados remotamente para um aplicativo mobile que os envia para um servidor que por sua vez calcula se houveram pausas de respiração superiores a dez segundos e ao mesmo tempo se houve redução no nível de oxigênio no sangue, o que configura uma apneia. Todo o histórico do sono é armazenado e fica disponível para a visualização por meio do próprio aplicativo mobile ou plataforma web no formato de dashboards e gráficos. Esse fluxo pode ser observado na figura 1.
+Segundo o Dr. Carlos M. Nunes, mais de 85\% dos pacientes com apneia do sono não são diagnosticados, o que significa que centenas de milhões de pessoas têm paradas respiratórias repetidas em vez de terem um sono restabelecedor e saudável a cada noite [2].
 
-% A apneia do sono é formalmente definida como uma desordem do sono onde a respiração é interrompida repetidamente em curtos intervalos de no mínimo dez segundos. (SALMAN, 2019)
+Pensando neste cenário onde existe um problema tão relevante para a nossa sociedade com um nível tão baixo de diagnóstico, o trabalho proposto é o desenvolvimento de um hardware composto de uma braçadeira com sensor de oxigenação sanguínea, e uma máscara com sensores embutidos para a aquisição de sinais oriundos da respiração do usuário durante o sono. 
+Esses dados são enviados remotamente para um aplicativo mobile que os envia para um servidor que por sua vez calcula se houveram pausas de respiração superiores a dez segundos e ao mesmo tempo se houve redução no nível de oxigênio no sangue, o que configura uma apneia. 
+Todo o histórico do sono é armazenado e fica disponível para a visualização por meio do próprio aplicativo mobile ou plataforma web no formato de dashboards e gráficos.
 
-% Ainda segundo Salman (2019), existem dois tipos de apneia do sono, a apneia do sono central, onde o cérebro apresenta dificuldades em controlar a respiração durante o sono e a apneia do sono obstrutiva, onde os músculos da parte posterior da garganta obstruem as vias aéreas, sendo esta a causa majoritária de apneia do sono.
+A apneia do sono é formalmente definida como uma desordem do sono onde a respiração é interrompida repetidamente em curtos intervalos de no mínimo dez segundos. (SALMAN, 2019)
 
-% Os dois efeitos diretos da apneia do sono é a fragmentação do sono, cujo exemplo pode ser observado na Figura 1, e redução do nível de oxigenação sanguínea que por sua vez podem causar diversos outros problemas tais como sonolência diurna excessiva, hipertensão, doenças cardiovasculares, além de problemas de memória, humor e até mesmo aumento no número de acidentes de trânsito em decorrência da sonolência ao dirigir. (KUSHIDA, 2007)
+Ainda segundo Salman (2019), existem dois tipos de apneia do sono, a apneia do sono central, onde o cérebro apresenta dificuldades em controlar a respiração durante o sono e a apneia do sono obstrutiva, onde os músculos da parte posterior da garganta obstruem as vias aéreas, sendo esta a causa majoritária de apneia do sono.
+
+Os dois efeitos diretos da apneia do sono é a fragmentação do sono, cujo exemplo pode ser observado na Figura 1, e redução do nível de oxigenação sanguínea que por sua vez podem causar diversos outros problemas tais como sonolência diurna excessiva, hipertensão, doenças cardiovasculares, além de problemas de memória, humor e até mesmo aumento no número de acidentes de trânsito em decorrência da sonolência ao dirigir. (KUSHIDA, 2007)
 
 %% Contexto do problema
 
