--- a/biblio.bib
+++ b/biblio.bib
@@ -62,7 +62,7 @@
     This work proposed using an acceleration sensor as a reliable method of sleep apnea screening, detection of an apnea event, sending alert to the patient, and detection of the patient lying position. The developed device is more economical, comfortable, and convenient than existing systems for not only the patients but also the doctors. The patients can easily use this device in their home environment."
 }
 
-@article{10.1371/journal.pone.0166262,
+@article{101371,
     author = {Garbarino, Sergio AND Durando, Paolo AND Guglielmi, Ottavia AND Dini, Guglielmo AND Bersi, Francesca AND Fornarino, Stefania AND Toletone, Alessandra AND Chiorri, Carlo AND Magnavita, Nicola},
     journal = "PLOS ONE",
     publisher = {Public Library of Science},
